Remove local IDE cache folders from .gitignore
These are environment specific and who's to judge which are worthy and which aren't. Devs should ignore this at an environment level: https://help.github.com/articles/ignoring-files/#create-a-global-gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,6 @@ _ss_environment.php
 
 # ignore build tools
 /tools/phing-metadata
-.buildpath
-.project
-.settings
-.idea
-.DS_Store
+
+# ignore composer vendor folder
 /vendor/
